Use vh and fix misaligned rows

--- a/index.css
+++ b/index.css
@@ -34,21 +34,22 @@ html {
     color: var(--color);
     background-color: var(--background-color);
     border: 1px solid var(--color);
-    border-radius: 1rem;
+    border-radius: 0;
     text-align: center;
-    font-size: 5rem;
+    font-size: 5lvh;
     width: 100%;
     display: block;
+    box-sizing: border-box;
 }
 
 .options {
-    height: 6rem;
+    height: calc(5lvh + 1rem);
 }
 
 .controls {
     color: transparent;
     text-shadow: 0 0 0 var(--color);
-    height: 10rem;
+    height: 10lvh;
 }
 
 label>input[type="checkbox"] {
@@ -62,7 +63,7 @@ label>input[type="checkbox"]:checked+div {
 
 #character-input {
     box-sizing: border-box;
-    width: 12rem;
+    width: 12lvh;
 }
 
 .flex-center {
